correction in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1787,3 +1787,78 @@ bisilU oMde beLadiMgaLU oMdeV aMtha parxsAdiya aMgavu parxsidadhx\-parxsAdiya aM
  parxLayakUkx oLagAguvudilalx (8: 446):} \ullekha{ayAyx, nAvu guru liMga jaMgamada pAdoVdaka parxsAdasaMbaMdhigaLeMdu nuDiya koMba pAtakara muKava noVDalAgadu. adeVkeMdaDe, pAdoVdakava koMDa baLika, jananada beVra kitotxrasabeVku. parxsAdava koMDa baLike, parxLayava geliyabeVku. (savasaM. 8; maDimA. 465-179).}}
 \end{entry}
 
+\begin{entry}
+\word{pArxNadAsege parxsAda}
+\src{va}
+\meaning{\arthanonum{keVvala hasivanunx hiMgisikoLuLxva athavA pArxNavanunx uLisikoLuLxva saluvAgi sivxVkarisuva parxsAda:}
+\ullekha{parxsAdava koMDalilx, pArxNadAseyilalxdirabeVku, \hbox{Bakitxya} hotatxlilx, nijanishacxyavirabeVku (savasaM. 8; meremiM. 1357-477).}}
+\end{entry}
+%
+
+\begin{entry}
+\word{pArxNana parxkaqti}
+\src{va}
+\meaning{\arthanonum{pArxNaveV liMga, liMgaveV pArxNa eMdu heVLuva budidhxvaMtaru pArxNavu parxkaqtiya aMshaveMbudanunx maretidAdxre. pArxkaqtika savxBAvada pArxNavu citfsavxrUpada liMgavAgalAradu. Adare A pArxkaqtika aMshavu shivana guNa\-vAdudariMda, adanunx parxteyxVkaveMdu BAvisabAradu. \hbox{idanunx} tiLidavarige anuBAvadalilx paramaparxkAshavu kANisikoLuLxtatxde:}
+\ullekha{tanuvinamoVha taraharavAgi manada raBasa muMduvaredu pArxNana\-parxkaqtiparxveVshadoLu BAva BArxMtigoMDu. tananx savxBAvanariyade, sulalita sharaNarenisikoMba abadadhx mUDhara guru niraM\-jana neneyalAgadu (savasaM. 12; deVshikeVM (575-179).}}
+\end{entry}
+
+\begin{entry}
+\word{pArxNaliMgada bahiSAkxra}
+\src{va}
+\meaning{\arthanonum{parxtiyobabx mAnavana aMta\-raMgadalilx aMtasathxvAgiruva citakxleyanunx pArxNaliMgavanunx hasatxmasatxka\-saMyoVgada mUlaka horakekx taMdu iSaTxliMgadalilx pArxNaparxtiSeThx mADuvudu:}
+\ullekha{shirxVgurunAthanu mahA\-saMtoVSa huTiTx A shivakaLAtamxMge pUvaRda jaDasheYvamAgaRva \hbox{biDisi} nijaviVrasheYvadiVkeSxyaneV itutx hasatxmasatxka saMyoVgava mADi aMtaraMgadalilxruva pArxNaliMgava bahiSakxrisi, karasathxlakekx taMdu koTaTxnu (savasaM. 3; cenanxba. 935-298).}}
+\end{entry}
+
+\begin{entry}
+  \word{pArxNaliMgisathxla IshavxranAshana}
+  \src{va}
+\meaning{\arthanonum{liMgavanunx keYyalalxSeTxV alalx, pArxNaviruvalelxlAlx
+ parxtiSiThxsidavaneV pArxNaliMgi. hiVge rUparasagaMdhAdi\-gaLu AyA
+ iMdirxyagaLanunx soVMkuva munanxveV avugaLa bAgilinalilxruva
+ parashivananunx muTuTxtatxve. hiVge elalxru elalxvanunx
+ parashivanige modalu apiRsi tAvu anuBavisidare, yArU
+ kamaRbaMdhanakekx oLagAgabeVkAgilalx. Aga baMdhanakAya (tiroVdhAna)
+ mADuva Ishavxrana agatayxveV iruvudilalxvAdudariMda parashiva
+ ava\-nanunx nAshamADutAtxne:}
+\ullekha{parxsAdisathxla rudarxnAshana, pArxNaliMgisathxla IshavxranAshana, sharaNasathxla sadAshivanAshana, aikayxsathxla paramavasutx BAvanAshana (savasaM. 8; moVLimA. 2005-649).}}
+\end{entry}
+
+\begin{entry}
+\word{paqthivxya pUvARsharxyava kaLeyuvudu}
+\src{va}
+\meaning{\arthanonum{mAnava\-deVha racanege kAraNavAda paMcaBUtagaLalilx paqthivx tatatxvX oMdu. adara guNa vAsane. paqthivx tatatxvX kAraNadiMda mAnavanige oLeLxya vAsaneyanunx paDeyabeVkeMba iceCx mUDutatxde. Adare sadaBxkatxnAdavanige, iMtha Ase ilalx, athavA paqthivxya pUvARsharxya kaLedidAdxne:} \ullekha{paqthivxya pUvARsharxyava kaLeya(lariya)dananxkakx apupxvina pUvARsharxyava kaLeya\-lariyadananxkakx ...BakatxreMdu liMgava pUjisuvavara kaMDu nAnu beragAde (savasaM. 2; alalxma. 136-42).}}
+\end{entry}
+
+\begin{entry}
+\word{bahiraMgadaBinanxkirxV}
+\src{va}
+\meaning{\arthanonum{Bakatx hAgU BagavaMta Binanx\-neMba tapupxkalapxneyiMda mADuva bAhayx AcaraNe\-gaLu:}
+\ullekha{bahiraMgada BinanxkirxV BinanxjAcnxna BinanxBakitx muMdugoMDu, gaDaDx jaDe muDigaLa biTuTxkoMDu, lAMCanava hodudxkoMDu, kAMcanakekx keYyoDuDxta kaMcagAranaMte (savasaM. 8; maDimA. 462-174).}}
+\end{entry}
+
+\begin{entry}
+\word{bahiraMgadashudidhx}
+\src{va}
+\meaning{\arthanonum{tale boVLisikoLuLxvudu, gaqhasathxna veVSaBUSaNagaLanunx tayxjisuvudu, sAnxna mADuvudu, itAyxdi\-gaLelalx bahiraMga shudidhx. aMtaraMga shudidhxyilalxdeyeV mADida bahiraMga shudidhxge dhAmiRka mahatavxvilalx. neYtika AcaraNeyeV nija\-vAda aMtaraMga shudidhx:}
+\ullekha{kaLabeVDa, kolabeVDa, husiya nuDiyalu beVDa, muniyabeVDa, anayxrige asahayxpaDabeVDa, tananx baNiNxsabeVDa, idira haLiyalubeVDa, ideV aMtaraMga shudidhx, ideV bahiraMga shudidhx (savasaM. 1; basava. 235-59).}}
+\end{entry}
+
+\begin{entry}
+\word{bahiraMgadaSaTxmada}
+\src{kA}
+\meaning{\arthanonum{bahiraMgakekx saMbaMdhisidaMtiruva eMTu bageya gavaR\-gaLu:}
+\ullekha{kula Cala dhana rUpu ywvana videyx rAjayx tapa iMtivu bahiraMgadaSaTxmadaM\-gaLu (karaNa. 667-11).}}
+\end{entry}
+
+\begin{entry}
+\word{bahimuRKasuKavirahita}
+\src{va}
+\meaning{\arthanonum{AdhAyxtimxka sAdhaneya \hbox{parxthama} haMtadalilxruva sAdhakanu
+ liMgakekx horagina vasutxgaLAda niVru, hUvu, paterx, haNuNx, AhAra
+ itAyxdigaLanunx apiRsi paDuva suKaveV bahimuRKa suKa. iSaTxnUnx
+ mADadavanu bahimuRKa suKavirahita:}
+\ullekha{bahimuRKa suKa\-virahitaMge saguNApiRta shUnayx kANA. aMtamuRKa suKa\-virahitaMge niguRNApiRta shUnayx kANA (savasaM. 12; deVshikeV. 363-115)}}
+\newmeaning{\ni{muKasayx bahiH - bahimuRKaM; suKeVna virahitaH - suKavirahitaH}}
+\end{entry}
+
+
