correction is progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1861,4 +1861,111 @@ bisilU oMde beLadiMgaLU oMdeV aMtha parxsAdiya aMgavu parxsidadhx\-parxsAdiya aM
 \newmeaning{\ni{muKasayx bahiH - bahimuRKaM; suKeVna virahitaH - suKavirahitaH}}
 \end{entry}
 
+\begin{entry}
+\word{barxhamxnakalipxta}
+\src{va}
+\meaning{\arthanonum{barxhamxna saqSiTxge matetx oLagAgadidadxre Aga guru liMga koTiTxdudu sAthaRka:}
+\ullekha{barxhamxna kalipxtava kaLeyanAgi guruliMgava koTuTxdu husi (savasaM. 8; moVLimA. 1969-638).}}
+\end{entry}
+
+\begin{entry}
+\word{bAyoLagaNa bAyi}
+\src{va}
+\meaning{\arthanonum{pArxNaliMgiyAdavanu tananx bAyalilx paramAtamx uNuNxtAtxne eMdu BAvisuvudu:}
+\ullekha{bAyoLagaNa bAyalilx eMbavanAroV ? kaNiNxnoLagaNa kaNiNxnalilx noVDuvanAroV ? nA niVneMbalilx adeVnu heVLA (savasaM. 9; sagara. 549-177).}}
+\end{entry}
+
+\begin{entry}
+  \word{bAhayxsAthxnavAru}
+  \src{va}
+\meaning{\arthanonum{diVkeSxya mUlaka guru koTaTx iSaTxliMga\-vanunx Bakatxnu kakeSx,
+ kaMTha, karasathxla, urasajejx, utatxmAMga, amaLoVkayx I Aru
+ bAhayxsAthxnagaLalilx yAvudAdaroMdu sAthxnadalilx
+ dharisabeVku. AraMBadalilx idu AvashayxkavAdarU, anaMtaradalilx tananx iDiV deVhadalilx liMgaveMdu BAvisabeVku:}
+\ullekha{kakeSx, kaMTha, karasathxla, urasajejx, utatxmAMga, amaLoVkayx iMtiV Aru sAthxna bAhayxveMbe (savasaM. 7; nijagu 1268-401).}}
+\end{entry}
+
+\begin{entry}
+\word{bAhAyxMtara}
+\src{va}
+\meaning{\arthanonum{liMgAMgasAmarasayxda baLika aikayx sAdhisidavanige tAnu hAgU parashiva eMba beVdhavilalxveMba arivAgutatxde. liMgeYkayxnige ceVtanada oLahoragugaLa \hbox{vayxtAyxsa} anAvashayxkavAdadu:}
+\ullekha{ArUDhiya kUTa ajaDatavxMge bAhAyxMtaraMge, AhAvxna visajaRnaveMdu BeVdisadavane pArxNaliMgi (savasaM. 9; haDapa. 916-304).}}
+\end{entry}
+
+\begin{entry}
+\word{biMdumayasakAra}
+\src{va}
+\meaning{\arthanonum{paravanunx saMkeVtisuva oMdu akaSxra:} \ullekha{kaniRkeya pUvaRdakiSxNapashicxmoVtatxraMgaLalilx vayxsatxvAda catudaRLA\-kaSxraMgaLoLage modal pUvaRdaLada biMdumayasakArakekx AdhAraveMdu shakitxyeMdu kAyaRveMdu paraveMdu biMduveMdeYdu payARyanAmaMgaLf (savasaM. 11; imamxDi. 1312-604).}}
+\newmeaning{\ni{biMdu mayashacx asw kArashacx - biMdumayasakAraH}}
+\end{entry}
+
+\begin{entry}
+  \word{becucxbeVrAgadaBAva}
+  \src{va}
+\meaning{\arthanonum{Bakatxnu tananx deVheVMdirxyAdigaLelalx\-vanUnx parashivanigapiRsi,
+avu tananxvalalx shivanige seVridavu, eMdu tiLidAga tAnu
+parashivaniMda parxteyxVkavAda vayxkitxyeMbudanunx mareyutAtxne. tAnu
+tAnalalx, tAnu shivana AvAsasAthxna eMda\-rita sharaNana BAvavu becucxbeVrilalxda BAva (berasi beVrAgada BAva):}
+\ullekha{acucxgana senxVha, nicacxTada mecucxge becucx beVrAgada BAvavAge cenanxmalilxkAjuRnayayx oLage gaTiTxgoMDipapxnavavx (savasaM. 5; akakxma. 226-67).}}
+\end{entry}
+
+\begin{entry}
+\word{beLipxnasuKa}
+\src{va}
+\meaning{\arthanonum{anuBAviyu turiVyAvasethxyalilx kANuva atayxMta parxkAshamAnavAda iMdirxyAtiVta beLakeV beLupx. \hbox{adanunx} kANuvAga avanige AnaMdavU Agutatxde:}
+\ullekha{biLiyagiri taLaveLagAgi beLeye anuviDidu suKava kaMDu anuBavadavaLige \hbox{beLipxna} suKavaneVkiVkarisi noVDalu anuvAyitatxyAyx beLipxna hadinAresaLa piVTha (savasaM. 4; sidadhxrA. 828-233).}}
+\end{entry}
+
+\begin{entry}
+\word{beLipxna hadinAresaLa piVTha}
+\src{va}
+\meaning{\arthanonum{kaMThasAthxnadalilxruva hadinAru daLagaLanunxLaLx vishudidhx cakarx. idu turiVyAvasethxyalilxna anuBAvige goVcarisutatxde:}
+\ullekha{anuBavadavaLige beLipxna suKavaneVkiVkarisi noVDalu anuvAyitatxyAyx \hbox{beLipxna} hadinAresaLa piVTha (savasaM. 4; sidadhxrA. 828-233).}}
+\end{entry}
+
+\begin{entry}
+\word{BakatxMge paqthivxyaMga}
+\src{va}
+\meaning{\arthanonum{viVrasheYva sidAdhxMtadaMte deVhada benunxhuri, kutitxge, BUrxmadhayx matutx netitxyalilx parashiva nelesutAtxne. mUlAdhAradalilxruva shivanige AcAraliMgaveMdu hesaru. shivanu citfsavxrUpanAdudariMda, avanu nelesalu athavA vayxkatxvAgalu oMdu mAdhayxma beVku. kirxyAshakitxyeV A mAdhayxma. kirxyAshakitx paqthivxV BUtada matotxMdu hesaru. adara adhideVvate AcAraliMga.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad AcAraliMgavanunx sAdhisuva sAdhakanige BakatxneMdu hesaru. AcAraliMgavu namamxlilxyeV idadxrU \hbox{adanunx} sAdhisalu Bakatxnu kirxyAshakitxya duSapxriNAmagaLanunx nivArisi shudadhxvAda kirxyAshakitxyeV sharxdAdhxBakitx mADabeVkAgutatxde.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad hasivu, niVraDike, shoVka, moVha, mupupx matutx
+maraNa eMba SaDUmiR\-gaLu paqthivx tatatxvXda
+duSapxriNAma\-gaLu. aMgadApAyxyanada badalu liMgadApAyxyanava
+beLesikoMDare, hasivu ilalxvAgutatxde. hiVge uLida aidanUnx gelalxlu
+vacanakAraru vividha sAdhanagaLanunx sUcisidAdxre.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad hAgeyeV kirxyAshakitxyiMda utapxtitxyAda kameRVMdirxya\-gaLanunx AdhAyxtimxka kAyaRgaLige upayoVgisidare, AgalU kirxyAshakitx shudadhxvAdaMteyeV. adeV riVti OM namaH shivAya eMdu padeV padeV maMtarxvanunxcacxrisuva mUlaka vAgiMdirxyavanunx shudadhxgoLisabahudu. parashivanige heVge iDiV vishavxveV oMdu aMgavoV hAge, Bakatxnige paqthivxtatatxvXvu aMgavAgutatxde:}
+\ullekha{BakatxMge paqthivxyaMgavAgi, maheVshavxraMge apupxvaMgavAgi ...paMcatatatxvX kUDi baMdaralilx eyudxvali SaDusathxla rUpAyitutx (savasaM. 4; moVLimA. 1369-662).}}
+\end{entry}
+
+\begin{entry}
+\word{BakatxkAya mamakAya}
+\src{va}
+\meaning{\arthanonum{liMgAMgasAmarasayxvanunx sAdhisida anuBAvige, tananx deVha shivanadeMdU arivAgutatxde. parashivanu Bakatxna kAyavu nananx kAya (Bakatx kAya mamakAya) enunxtAtxne. Bakatxnu tAnu rucisuvudu, noVDuvudu, itAyxdigaLelAlx shivanigAgi eMdu tiLiyutAtxne. vacana\-kAraru anuBAviya kAyavanunx parashivana vAhana enunxtAtxre:}
+\ullekha{BakatxkAya mamakAyaneMdu avagarxhisikoMDa BakatxMge beVre pArxNavilAlxgi pArxNaveMdu avagarxhisikoMDa (savasaM. 6; uripe. 1451-506); sharaNa\-saninxhitanu, BakatxkAya mamakAyanu, dAsoVha paripUNaRnu, saduhaqdayadalilx siMhAsanavAhi agaladipaRnu karideVvayayx (savasaM. 8; maDimA. 453-169).}}
+\newmeaning{\ni{BakatxkAya mamakAya, BakatxkAyaH, mamakAyaH - BakatxsayxkAyaH BakatxkAyaH}}
+\end{entry}
+
+\begin{entry}
+\word{BakatxramaTha}
+\src{va}
+\meaning{\arthanonum{Bakatxra mane:}
+\ullekha{Bakatxra maThakekx baMdu oLahorageMbudu shiVlave ? (savasaM. 3; cenanxba. 587-177).}}
+\end{entry}
+
+\begin{entry}
+\word{BakatxviroVdhi}
+\src{va}
+\meaning{\arthanonum{Bakatxnu niSeThxyiMda liMgakekx apiRsida naMtara BuMjisidare, sharaNasathxlavanunx talupidavanu (shara\-Nanu) keYyiMda apiRsade vasutx\-gaLanunx avu idadxlilxyeV manasisxnalelxV apiRsi, parxsAda\-vanAnxgi mADikoLuLxtAtxne. tananx deVheVMdirxya karaNAdi AtamxvanUnx parashivanige apiRsiruvudariMda, apiRsuva vasutxvAgali, apiRsuva AtamxvAgali, deVhavAgali avanalilx uLidilalx. Bakatxnige opipxgeyAguvudilalx; sharaNanige Bakatxna kirxye siVmita eninxsutatxde. AdudariMda sharaNanu BakatxviroVdhi:} \ullekha{aMdhakana keYya biTaTxlilx loVka viroVdha, loVka viroVdhi Bakatx, Bakatx viroVdhi sharaNa, sharaNa viroVdhi liMgeYkayx. I tirxvidha viroVdhi kUDala cananxsaMgana mahAGanavu (savasaM. 3; cenanxba. 770-???).}}
+\newmeaning{\ni{BakAtxnAMviroVdhaH asimxnf asitx iti - BakatxviroVdhiV; Bakatx viroVdhiV ca asw sharaNashacx - BakatxviroVdhi sharaNaH}}
+\end{entry}
+
+\begin{entry}
+\word{BavabiVjada nele}
+\src{va}
+\meaning{\arthanonum{punajaRnamxkekx agatayxvAda kamaR\-gaLu, saMsAra avugaLa nele:}
+\ullekha{Bavavirahita kAyaRvaneYdhi, Bava\-biVjada neleyanAsharxyisidaDe Bava tapapxdu noVDA, kapila sidadhxmalilxkAjuRnA (savasaM. 4; sidadhxrA. 1707-484).}}
+\end{entry}
 
