correction in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1969,3 +1969,92 @@ vacanakAraru vividha sAdhanagaLanunx sUcisidAdxre.}}
 \ullekha{Bavavirahita kAyaRvaneYdhi, Bava\-biVjada neleyanAsharxyisidaDe Bava tapapxdu noVDA, kapila sidadhxmalilxkAjuRnA (savasaM. 4; sidadhxrA. 1707-484).}}
 \end{entry}
 
+\begin{entry}
+  \word{Barxme tiLidavanu}
+  \src{va}
+\meaning{\arthanonum{BarxmeyiMda ececxtatxvanu. tAnu parashivaniMda Binanx eMdu tapApxgi tiLidavanu:} \ullekha{shivaciMte shivajAcnxna Barxme tiLidavaMgalalxde AcAra shivAcAra tamatamage sUreye? kUDala\-saMgamadeVvana pUjisidavaMgalalxde (savasaM. 9; basava. 656-165).}}
+\end{entry}
+
+\begin{entry}
+\word{BAvaMgaLeYdu}
+\src{va}
+\meaning{\arthanonum{aidu vAyu\-gaLu, aidu BUta\-gaLu, aidu aMtaHkaraNa\-gaLu, aidu iMdirxya\-gaLu, aidu viSaya (tanAmxterx)\-gaLu eMba aidu paMcatatatxvX\-gaLu
+padAthaR\-gaLu \hbox{eMbudu} modalaneya BAva; jAcnxtaq (tAnu) eMbudu eraDaneya BAva; jecnxVya (idiru) eMbudu mUraneya BAva; koDabeVku (apiRta) eMbudu nAlakxneya BAva matutx tegedukoLaLxbeVku (parxsAda) eMbudu aidaneya BAva. sharaNanu ivelalx keVvala toVrike eMbudanunx \hbox{aritu}, avugaLanunx maretu, elalxvU oMdeV \hbox{(shivaneV)} eMdu tiLiyabeVku:}
+\ullekha{I BAvaM\-gaLeYdara toVrikeyanaridu maredalilx mahAmahima guru niraMjana cananxbasavaliMga tAnAda sharaNa (savasaM. 12; \hbox{deVshikeVM.} 1169-352).}}
+\end{entry}
+
+\begin{entry}
+\word{BAva niBARvavaneyudxvudu}
+\src{va}
+\meaning{\arthanonum{nAnu idedxVne, nAnu mADutetxVne, nAnu suKisutitxdedxVne
+ athavA duHKisutitxdedxVne eMbudelAlx BAva. vasutxgaLa arivige,
+ nananx suKaduHKagaLa anuBavakekx matutx nAnu I kelasagaLanunx
+ mADabeVku athavA mADabAradu eMba nidhARrakekx I nAnu eMba BAva
+ Avashayxka. Adare paramAtamxnalilx aikayxvAguvAga, I BAva
+ nashisihoVgi, niBARvavAgutatxde. niBARvavAgade shivasAkASxtAkxra
+ sAdhayx\-vilalx:}
+\ullekha{animiSanAda nibebxragina liMgeYkayxnu, BAva niBARvavaneyidx, jAcnxnave paramAsharxyavAgipapx liMgeYkayxnu (savasaM. 9; saMapapx. 276-92).}}
+\end{entry}
+
+\begin{entry}
+\word{BAvadapUje}
+\src{kA}
+\meaning{\arthanonum{manasisxna BAvadalilx mADuva pUje:}
+\ullekha{aridu BAvada pUjeyaM mADi BakatxnaM harasatutx hasatxmasatxkada saMyoVgadiM karuNagarevuta haruSadiM (pwrxDhakA. 43-94)}}
+\end{entry}
+
+\begin{entry}
+\word{BAvadaBarxme}
+\src{va}
+\meaning{\arthanonum{nAnu parashivaniMda parxteyxVkavAda \hbox{vayxkitx} eMba Barxme. nAnu parashivana BAga athavA aMga eMbudu satayx:}
+\ullekha{pArxNaliMgasaMbaMdhigaLeMba BAvadaBarxmeyiMda baLalu\-titxpapx jAcnxni\-gaLu niVvu keVLiroV, liMga pArxNavoV? pArxNaliMgavoV? (savasaM. 8; moVLige. 1927-627); enanx BAvadaBarxmeya keDisayayx (savasaM. 14; SaNumxKa. 278-178).}}
+\end{entry}
+
+\begin{entry}
+\word{BAvapiMDajAcnxna aikayxleVpasathxla}
+\src{va}
+\meaning{\arthanonum{I ArU pada\-gaLu oTuTxgUDi AdhAyxtimxka jiVvanada koneya haMtakekx anavxyisutatxve. Adare ivugaLalilxna modalaneV aidu padagaLa sapxSaTxne Avashayxka.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad BAva eMdare, nAnu eMba parxteyxVka BAva. Adare AdhAyxtimxka
+ jiVvanada koneya GaTaTxdalilx nAnu eMba BAvakekx sAvxthaRparavAda
+ AsegaLAgali, AdhAyxtimxka jiVvanakekx aDiDx mADuva kAma,
+ korxVdhAdigaLAgali iruvudilalxvAdudariMda, adu shudadhx\-vAda Atamx
+ (jiVva). piMDaveMdare deVha.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad piMDadalilx jAcnxneVMdirxya
+ kameRVMdirxyagaLU alalxde, aMtaHkaraNacatuSaTxyavU irutatxve. Adare
+ AdhAyxtimxka jiVvanada koneya GaTaTxdalilx
+ deVheVMdirxyakaraNAdigaLelalxvU shudadhxvAgi, kAyavu
+ akAyavAgirutatxde. alalxde A GaTaTxdalilx sAdhakanu (\hbox{sidadhxnu})
+ tananx deVhavu shivana deVhaveMdU, tananxdeMba deVha tanagilalxveMdU
+tiLidirutAtxne.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad jAcnxna athavA arivu eMdare jagatitxna bagege athavA adara kelavu viBAgagaLa bagege paDeyuva tiLuvaLike eMdalalx. jiVvA\-tamxnu baMdhanadalilxruvAga iMdirxya, aMtaHkaraNa itAyxdigaLa parxBAvakokxLapaTiTxrutAtxne. Adare AdhAyxtimxka jiVvanada koneya haMtadalilx jiVvAtamxnige avugaLa saMgavidadxrU, avugaLa parxBAvakekx horatAgidAdxne. aMtaha citfsavxrUpanAda AtamxneV jAcnxna. adeV jAcnxna piMDadalilxyU alalxde, parxpaMcadalelxlAlx vAyxpakavAgi haraDikoMDide. aMdare vayxkitxyalilxruva AtamxnU (jAcnxnavU) parxpaMcadalilxruva barxhamxnU (jAcnxnavU) oMdeV alalxde eraDalalx.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad aikayx eMdare eraDalalxde, oMdu eMdathaR. shudadhxvAda jiVvAtamxnu (jAcnxnavu) vishAvxtamx parashivanoMdige oMdAdAga, avanu tananxnunx parxteyxVkisikoLuLxvudilalx. alalxde avana deVha, iMdirxyAdigaLelAlx liMgamayavAdudariMda, avanu idu deVha, idu Atamx eMdu BeVda mADade, elalxvanUnx oMdeV eMdu tiLiyutAtxne.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad leVpa eMdare dharisuvudu. liMgadalilx aikayxnAdavanu tananx parxteyxVkateyanunx kaLedukoMDu, tananx vayxkitxtavxkekx shivatavxvanunx leVpisi\-koLuLxtAtxne. alilxMda muMdakekx tAnobabx vishiSaTx vayxkitxyaMte naDedukoLaLxde, shivanu naDesuva vAhanadaMte athavA goMbeyaMte naDedukoLuLxtAtxne.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad AdhAyxtamxjiVvanada koneyanunx muTiTxruvavana sithxti I
+ meVlinaMtidadxre, avana sithxtiyanunx BAvapiMDajAcnxnasathxlaveMdu
+kareyabahudu (va.pa.koV. 288-89).}}
+\smallskip
+\newmeaning{\ni{BAvapiMDasayx jAcnxnaM - BAvapiMDajAcnxnaM}}
+\newmeaning{\ni{aikayxsayx leVpaH - aikayxleVpaH, aikayxleVpaH iti sathxlaM - aikayxleVpasathxlaM}}
+\end{entry}
+
+\begin{entry}
+\word{BUtanAyakara sAthxna}
+\src{va}
+\meaning{\arthanonum{mAnava deVhavu paMcaBUtagaLiMda racitavAgidudx, parxtiyoMdu
+ BUtakUkx obobxbabx adhideVvate athavA nAyakanirutAtxne. A nAyakaru
+ namamx deVhada vividha BAgagaLalilx elilxrutAtxreMbudakekx vivara:}}
+\smallskip
+\newmeaning{\arthanonum{\qquad paqthivxVBUtada nAyakanAda barxhamxnu haqdayasAthxnadalilx;
+ apftatatxvXda nAyakanAda viSuNxvu kaMThasAthxnadalilx; aginx\-BUtada
+ nAyakanAda rudarxnu BUrxmadhayxdalilx, vAyu\-BUtada nAyakanAda
+ Ishavxranu netitxyalilx matutx AkAshatatatxvXda nAyakanAda sadAshivanu
+lalATadalilx idAdxre:}
+\ullekha{inunx BUta\-nAyakara sAthxnaveMteMdaDe : haqdayasAthxnadalilx barxhamxnihanu, kaMThasAthxnadalilx viSuNxvihanu, BUrxmadhayxdalilx rudarxnihanu, BUrxmadhoyxVdavxRdalilx Ishavxranihanu, lalATAMtaradalilx sadAshivanihanu (savasaM. 13; bAlasaM. 267-116).}}
+\end{entry}
+
