correction in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -2058,3 +2058,134 @@ lalATadalilx idAdxre:}
 \ullekha{inunx BUta\-nAyakara sAthxnaveMteMdaDe : haqdayasAthxnadalilx barxhamxnihanu, kaMThasAthxnadalilx viSuNxvihanu, BUrxmadhayxdalilx rudarxnihanu, BUrxmadhoyxVdavxRdalilx Ishavxranihanu, lalATAMtaradalilx sadAshivanihanu (savasaM. 13; bAlasaM. 267-116).}}
 \end{entry}
 
+\begin{entry}
+\word{madhayxmada suKa}
+\src{va}
+\meaning{\arthanonum{BUmiyalilxna suKa; pArxpaMcika suKa; BUmi, savxgaR matutx pAtakada madhayxdalilxruvudariMda pArxpaMcika suKavanunx madhayxmada suKa enanxlAguvudu:} \ullekha{madhayxmada suKavanu hodudxva tatavxvanu adhaRbiMbagaLa kiraNaMgaLa I hodadxda parxpaMcikava nitayxda tatavxvanu madhayxmadalilx kaMDe kANA kapilasidadhxmalilxkAjuRna (savasaM. 4; sidadhxrA. 873-246).}}
+\end{entry}
+
+\begin{entry}
+\word{mana hALAguvudu}
+\src{va}
+\meaning{\arthanonum{anuBAviyU liMgAMga sAmarasayxdiMdAgi tananxtanavanunx kaLedu koLuLxtAtxne. avanu yoVcisuvudu, iciCxsuvudu, elalxvU \hbox{shivana} iceCxyiMdaleV horatu, taninxceCxyiMdalalx:}
+\ullekha{ayAyx, nimamx anuBAvadiMda enanx mana hALAyitatxyAyx (savasaM. 1; basava. 509-123).}}
+\end{entry}
+
+\begin{entry}
+\word{manakekx sAhitayx}
+\src{va}
+\meaning{\arthanonum{(liMgavu) manasisxnalilx aMtasathxvAguvudu:}
+\ullekha{manakekx sAhitayxvAdalalxde kAyakekx sAhitayxvAgabAradu (savasaM. 8; bibibxbA. 383-139).}}
+\end{entry}
+
+\begin{entry}
+\word{manadaMtayARmi}
+\src{va}
+\meaning{\arthanonum{parashivanu BwtavasutxvinalilxyU alalxde, manasisxnalilxyU idudx, adanunx oLaginiMdaleV ALutAtxne:}
+ \ullekha{manavaMcaneya anayxliMgAcaRne adu nijavalalx, nijavalalx kUDala\-saMgamadeVvanu manadaMtayARmi (savasaM. 1; basava. 812-208).}}
+\end{entry}
+
+\begin{entry}
+\word{manadameYlige}
+\src{va}
+\meaning{\arthanonum{avideyx matutx adariMda huTuTxva sAvxthaR\-para Ase, kAma, korxVdha muMtAda manoVvikAra\-gaLu:}
+\ullekha{sUtarxdhAri manada meYligeya kaLeya baMdanayAyx maDivALanu (savasaM. 1; basava. 1192-385).}}
+\end{entry}
+
+\begin{entry}
+\word{manadashile}
+\src{va}
+\meaning{\arthanonum{shivaneV iSaTxliMgaveMba kalilxnalilx nelesuva badalu manasesxMba kalilxnalelxV nelesu eMba pArxthaRne:}
+\ullekha{\hbox{manada} shileyalilx kuruhugoLuLx. aleVKavAda shUnayx avatAra shUnayx enagoMdu heVLA (savasaM. 9; vacana. 61-20).}}
+\end{entry}
+
+\begin{entry}
+\word{manadasUtaka hiMgisuvudu}
+\src{va}
+\meaning{\arthanonum{sadA oMdilolxMdanunx bayasuvudeV manasisxna sahaja guNa. oMdu bayake mugiyutitxdadxMteyeV matotxMdakekx manasusx negeyutatxde. parxtiyoMdu parashivana parxsAda eMba BAva namamxlilx mUDuvudeV ilalx. AdudariMda parxsAdiyAgabayasuvavanu manada sUtakava modalu hiMgisabeVku:}
+\ullekha{manada sUtaka hiMgiyalalxde parxsAdiyAgabAradu (savasaM. 8; manumaM. 1030-349).}}
+\end{entry}
+
+\begin{entry}
+\word{manadaBaMga}
+\src{va}
+\meaning{\arthanonum{Bakatxsathxlada sAdhakanu tAnu hAgU parashivanu BinanxveMdU tapupx tiLidukoMDirutAtxne. avanu aikayxsathxlavanunx \hbox{muTiTxda} naMtara I tapupx tiLivaLike mAyavAgi, tananx manasusx liMga\-diMda parxteyxVkavalalx eMba arivu uMTAgutatxde:}
+\ullekha{manada BaMgava aruhina muKadiMde gelide (savasaM. 5; akakxma. 3-2).}}
+\end{entry}
+
+\begin{entry}
+\word{manadaLa viBADa}
+\src{va}
+\meaning{\arthanonum{parashiva manasisxnalilxruva keTaTx yoVcane\-gaLu, Ase\-gaLeMba shaturxgaLanunx nAshamADuvavanu (viBADa); parashiva:}
+\ullekha{elalxra gaMDaMdiru paradaLaviBADaru; enanx gaMDa manadaLaviBADa (savasaM. 5; kadira. 745-231).}}
+\end{entry}
+
+\begin{entry}
+\word{matayxRda maNiha}
+\src{va}
+\meaning{\arthanonum{matayxRloVkadalilx Bakatx mADabeVkAda pUje, varxta, muMtAda AcaraNe:} \ullekha{koTaTx varxtaparxsAda, A parxsAdavenage parxsananx. nimage matayxRda maNiha hiMguvananxkakx enanx varxtadalilx, enanx AcAradalilx, nA hiDida neVmadA BikeSxyalilx, nA tapipxdaDe, tapupx hotatxlilx nimamx keVLidaDe (savasaM. 8; meremiM. 1358-476).}}
+\end{entry}
+
+\begin{entry}
+\word{mahAliMgada parxsananxtavx}
+\src{va}
+\meaning{\arthanonum{tananx Atamxvanunx mahAliMgakakxpiRsi, anuBAvada mUlaka AnaMda paDeda sharaNanu, tananx parxteyxVkate (vishiSaTxte)yanenxV kaLedukoLuLxtAtxne. aikayx sithxtiyalilx tAnu beVre liMga beVre eMdu tiLiyade adaralelxV saMpUNaRvAgi beretiruvudariMda, mahAliMgana parxsananxtege pAtarxnAgi, bayalinalilx bayalu beretaMte bayalAgutAtxne.}} 
+\end{entry}
+
+\begin{entry}
+\word{maheVshavxranige apupx aMga}
+\src{va}
+\meaning{\arthanonum{mUlAdhArada meVliruva sAvxdhiSAThxnacakarxnalilx nelesiruva
+ shivanige guruliMgaveMdu hesaru; shivanu mAnavanalilx vayxkatxvAgalu
+oMdu mAdhayxma beVku. jAcnxna\-shakitxyeV A mAdhayxma. jAcnxnashakitxyu
+apf (niVru) tatatxvXda matotxMdu hesaru. aMdare, guruliMgavu
+jAcnxnashakitxya adhideVvate. guruliMgavanunx sAkASxtakxrisikoLuLxva sAdhakanige
+ maheV\-shavxraneMdu hesaru. guruliMgavu namamx benunxhuriyalelxV
+ idadxrU, adanunx sAkASxtakxrisikoLaLxlu sAdhakanu apf (jala) tatatxvXda
+ duSapxriNAmagaLanunx kaDime mADi, adanunx shudadhx
+ mADabeVkAgutatxde. shudadhxvAda jAcnxnashakitxge niSAThxBakitx eMdu
+ hesaru.}}
+\newmeaning{\arthanonum{\qquad jAcnxnashakitxyanunx (apftatatxvXvanunx) shudadhx mADuvudu heVge?
+ jAcnxnashakitxya utapxnanxgaLAda tanAmxterx
+ (rUparasagaMdhAdi)gaLanunx hatoVTiyalilxDuvudeV
+ jAcnxnashakitxyanunx shudidhxVkarisuva \hbox{vidhAna}. aMdare sAdhakanu
+ yAva riVtiya tanAmxterx\-gaLu AdhAyxtimxka jiVva\-nakekx
+ aDiDxyAgutatxve, yAva riVtiya tanAmxterx\-gaLu AdhAyxtimxka
+ jiVvanakekx sahAyavAgutatxve eMbudara vayxtAyxsavanunx
+ tiLidukoLaLxbeVkAgutatxde. jAcnxnashakitxya duSapxriNAmagaLanunx kaDime mADi, niSAThxBakitx\-yanunx beLesikoLuLxva sAdhakanige maheVshavxra eMba hesaridudx, avanu iMdirxya nigarxha mADuva mUlaka jAcnxnavanunx paDeyabeVku eMbudu idara tAtapxyaR (va.pa.koV. 303):}
+\ullekha{BakatxMge paqthivxyaMgavAgi maheVshavxraMge apupx aMgavAgi parxsAdige aginxyaMgavAgi pArxNaliMgige pavanaMgavAgi (savasaM. 8; moVLimA. 1972-638).}}
+\end{entry}
+
+\begin{entry}
+\word{miVrida kirx}
+%\src{koV}
+\meaning{\ullekha{miV{\ri}da kirxVya saMpAdisalAgi devxYtiyalalx adevxYtiyalalx (savasaM. 3; cenanxba. 95-27).}
+\arthanonum{miVrida kirx:}
+\ullekha{anuBavadiMda mamaRvanunx tiLidukoMDu aMtaraMgadalilx avugaLanunx daqDhapaDisikoMDu AcarisidAdxdare, avu miVrida kirxV\-gaLu. avu aMtaraMgada AcaraNege saMbaMdhisutatxve (shivAkoV. 4-8).}}
+\end{entry}
+
+\begin{entry}
+\word{miVridakirxyAliMgasididhx}
+\src{va}
+\meaning{\ullekha{mAgaRkirxyAliMgaviDidu miVridakirxyAliMgasididhx miVridakirxyAliMgaviDidu kirxyAniSapxtitxliMgasididhx (savasaM. 3; cenanxba. 990-323).}}
+\newmeaning{\arthanonum{\SEE{miVrida kirxVliMgasididhx}}}
+\end{entry}
+
+\begin{entry}
+\word{miVridakirxyAsamaya}
+\src{va}
+\meaning{\arthanonum{SaTasxthXlAcaraNegaLa mamaRvanunx tiLidukoMDu anusarisuva padadhxti (viV.pA.koV. 429):}
+\ullekha{mAgaRkirxyAsamayadalilx shivashakitxsaMpuTa, miVrida kirxyAsamayadalilx shivaliMgasaMpuTa (savasaM. 3; cenanxba. 747-224).}}
+\end{entry}
+
+\begin{entry}
+\word{miVridakirxye}
+\meaning{\arthanonum{mAgaRkirxye, miVridakirxye eMba eraDu bageya kirxyegaLalilx oMdu; sAvxnuBAvadiMda AMtayaRvanunx aritukoMDu Acarisuva kirxye:}
+\ullekha{miVridakirxyeyalilx niMdu samarasavAda sharaNa (savasaM. 12; deVshikeVM. 817-245); liMgAMgasAmarasayxdalilx modalu mAgaRkirxyegaLa parxgatiyu, AmeVle miVridakirxyegaLa parxgatiyu (shivAkoV. 139-318). ``miVrida kirxye\-gaLu -ivugaLalilx 12 BAgagaLidudx parxtiyoMdaralilx 9 kirxyegaLive. hiVge avu saha oTuTx 108 Agutatxve. oMdoMdu BAgadalilx punaH 9 kirxyegaLidudx avu hececxcucx sUkaSxmXvAgutatx hoVgu\-tatxve. avu 1. kamaRsAdAKayx kaqtaRsAdAKAyxdi sAdAKayx\-gaLu, 2. nakAra makArAdi parxNama\-gaLu, 3. tArakAkaqti daMDakAkaqtAyxdi Akaqti\-gaLu, 4. pUvaRpashicxmAdi dikukx\-gaLu, 5. QugevxVdayajuveRVdAdi veVda\-gaLu, 6. nivaqtitxkale parxtiSAThxkale modalAda kale\-gaLu, 7. GArxNeVMdirxya jihevxVMdirxyAdi muKa\-gaLu, 8. gaMdha rasAdi padAthaR\-gaLu, 9. sugaMdha surasAdi parxsAda\-gaLu, 10. Barxmara veVNAvxdi nAda\-gaLu, 11. satf citf AnaMdAdi lakaSxNa\-gaLu, 12. paragUDha shariVrasAthxdi saMjecnx\-gaLu iveV irutatxve (shivAkoV. 139-320).}}
+\end{entry}
+
+\begin{entry}
+\word{miVrida kirxV liMgasididhx}
+\meaning{\arthanonum{AMtayaRvanunx tiLidukoMDu mADuva kAyaRgaLa sAdhane:} \ullekha{``miVrida kirxyAliMgasididhx - aMtaraMgadalilx pArxNaliMgavu sAdhayxvAgutitxhudu (basaTiV. {\rm\em{II,}} 233-879 TiVku); mAgaRkirxVliMgaviDidu miVridakirxVliMgasididhx miVridakirxVliMgaviDidu kirxyAniSapxtitxliMgasididhx (savasaM. 1; basava. 878-229).}}
+\end{entry}
+
